# ratatui_todo_app

./: .env  .gitignore  Cargo.toml  LICENSE  dummy.sh
src/: app_context.rs  constants.rs  data_file_source.rs  drawing.rs  input.rs  main.rs  prelude.rs  run.rs  setup.rs  todo.rs  trimmed_text.rs
src/app_context/: current_view.rs  io_task_result.rs
src/drawing/: draw_todo_create_mask.rs  draw_todo_list.rs  widget_tui_todo.rs
